--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -7,3 +7,9 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+
+<div>
+    <form action="/sentry" method="get">
+        <button>Send sentry</button>
+    </form>
+</div>
